[package]
name = "wake-build"
version = "0.1.1"
edition = "2021"
description = "Rust-written Make alternative"
license = "BSD-2-Clause"
author = "Demir Yerli <mrquantumoff@protonmail.com>"

[[bin]]
name = "wake"
path = "src/main.rs"

[lib]
name = "wakelib"
crate-type = ["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.clap]
version = "3.1"
features = ["cargo"]

[dependencies]
colored = "2.0.0"

